--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,10 @@
 $root-font-size: 1rem;
-$font-family: 'Roboto', sans-serif;
-$page-width: 800px;
+$font-family: 'Roboto',
+sans-serif;
+$page-width: 1200px;
 $paragraph-font-size: 1.6rem;
+$primary-color: #48c3dc;
+$secondary-color: #452e76;
+$gray: #808080;
+$white: #FFF;
+$black: #000;
