--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
+@import 'normalize';
 @import 'variables';
-html {
+html,
+body {
     font-size: $root-font-size;
     font-family: 'Open Sans', sans-serif;
-    max-width: $page-width;
     margin: 0 auto;
     text-align: center;
 }
