--- a/src/styles/components/_people.scss
+++ b/src/styles/components/_people.scss
@@ -18,8 +18,7 @@
         flex-wrap: wrap;
     }
     &__item {
-        border: 1px solid green;
-        padding: 1rem;
+        padding: 2rem;
         width: 20%;
     }
     &__mail {
@@ -51,22 +50,32 @@
         border-radius: 50%;
         background-size: cover;
         background-position: center center;
+        -webkit-box-shadow: 0px 0px 0px 0px rgba(69, 46, 118, 0);
+        -moz-box-shadow: 0px 0px 0px 0px rgba(69, 46, 118, 0);
+        box-shadow: 0px 0px 0px 0px rgba(69, 46, 118, 0);
+        transition: box-shadow .4s ease, transform .4s ease;
         &::before {
             display: block;
             content: "";
             position: relative;
             padding-bottom: 100%;
         }
+        &:hover {
+            transform: scale(1.05);
+            -webkit-box-shadow: 0px 10px 22px 0px rgba(128, 128, 128, 1);
+            -moz-box-shadow: 0px 10px 22px 0px rgba(128, 128, 128, 1);
+            box-shadow: 0px 10px 22px 0px rgba(128, 128, 128, 1);
+        }
     }
-    &__overlay {
-        background: $primary-color;
-        opacity: .75;
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-    }
+    // &__overlay {
+    //     background: $primary-color;
+    //     opacity: .75;
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     bottom: 0;
+    //     right: 0;
+    // }
     &__name {
         color: $secondary-color;
         font-weight: 400;
