--- a/src/styles/components/_people.scss
+++ b/src/styles/components/_people.scss
@@ -3,6 +3,7 @@
     background-position: center center;
     background-repeat: repeat;
     overflow: hidden;
+    padding-top: 3rem;
     h2 {
         color: $secondary-color;
         font-weight: 600;
@@ -53,7 +54,7 @@
         -webkit-box-shadow: 0px 0px 0px 0px rgba(69, 46, 118, 0);
         -moz-box-shadow: 0px 0px 0px 0px rgba(69, 46, 118, 0);
         box-shadow: 0px 0px 0px 0px rgba(69, 46, 118, 0);
-        transition: box-shadow .4s ease, transform .4s ease;
+        transition: box-shadow .2s ease, transform .2s ease;
         &::before {
             display: block;
             content: "";
@@ -66,6 +67,7 @@
             -moz-box-shadow: 0px 10px 22px 0px rgba(128, 128, 128, 1);
             box-shadow: 0px 10px 22px 0px rgba(128, 128, 128, 1);
         }
+        margin-bottom: 2rem;
     }
     // &__overlay {
     //     background: $primary-color;
