--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,11 +13,18 @@ p {
     font-size: $paragraph-font-size;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+    margin-top: 0;
+}
+
 div {
     box-sizing: border-box;
 }
 
-@import 'components/people';
 h1,
 .h1 {
     font-size: 60px;
@@ -37,3 +44,7 @@ h4,
 .h4 {
     font-size: 14px;
 }
+
+@import 'components/people';
+@import 'components/people-slider';
+@import '~swiper/swiper';
