--- a/src/styles/components/_people-slider.scss
+++ b/src/styles/components/_people-slider.scss
@@ -4,6 +4,20 @@
     background: $gray;
     display: flex;
     align-items: center;
+    transform: scale(0);
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    min-height: 100vh;
+    z-index: 1000;
+    transition: opacity .4s 0s, transform 0s .4s;
+    &.open {
+        transform: scale(1);
+        opacity: 1;
+        transition: opacity .4s 0s, transform 0s;
+    }
     &__wrapper {
         border: dashed 5px rgba(255, 255, 255, .25);
         display: inline-block;
@@ -26,6 +40,7 @@
         background: $white;
         top: 2rem;
         right: 2rem;
+        z-index: 1000;
     }
     &__prev {
         position: absolute;
