--- a/src/styles/components/_people.scss
+++ b/src/styles/components/_people.scss
@@ -4,6 +4,7 @@
     background-repeat: repeat;
     overflow: hidden;
     padding-top: 3rem;
+    padding-bottom: 3rem;
     h2 {
         color: $secondary-color;
         font-weight: 600;
@@ -13,15 +14,15 @@
         // grid-column-gap: 50px;
         // grid-row-gap: 50px;
         // grid-template-columns: repeat(auto-fit, minmax(200px, auto));
-        max-width: 1280px;
+        // max-width: 1280px;
         margin: 0 auto;
-        display: inline-flex;
-        flex-wrap: wrap;
+        // display: inline-flex;
+        // flex-wrap: wrap;
+        padding-left: 15px;
+        padding-right: 15px;
+        max-width: 1280px;
     }
-    &__item {
-        padding: 2rem;
-        width: 20%;
-    }
+    &__item {}
     &__mail {
         height: 40px;
         width: 40px;
@@ -35,11 +36,17 @@
         background-position: center center;
         background-repeat: no-repeat;
         background-size: 18px 12px;
-        transition: ease .4s background-color;
+        transition: ease .4s background-color, box-shadow .4s;
+        -webkit-box-shadow: 0px 0px 0px 0px rgba(72, 195, 220, 1);
+        -moz-box-shadow: 0px 0px 0px 0px rgba(72, 195, 220, 1);
+        box-shadow: 0px 0px 0px 0px rgba(72, 195, 220, 1);
         &:focus,
         &:hover {
             background-color: lighten($secondary-color, 10%);
             cursor: pointer;
+            -webkit-box-shadow: 0px 0px 15px 0px rgba(128, 69, 255, 1);
+            -moz-box-shadow: 0px 0px 15px 0px rgba(128, 69, 255, 1);
+            box-shadow: 0px 0px 15px 0px rgba(128, 69, 255, 1)
         }
     }
     &__avatar-wrapper {
@@ -55,6 +62,7 @@
         -moz-box-shadow: 0px 0px 0px 0px rgba(69, 46, 118, 0);
         box-shadow: 0px 0px 0px 0px rgba(69, 46, 118, 0);
         transition: box-shadow .2s ease, transform .2s ease;
+        cursor: pointer;
         &::before {
             display: block;
             content: "";
