--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -58,3 +58,22 @@ h4,
 @import 'components/people';
 @import 'components/people-slider';
 @import '~swiper/swiper';
+@import '~bulma-scss/utilities/all';
+@import '~bulma-scss/base/all';
+@import '~bulma-scss/grid/all';
+.readers-only {
+    position: absolute !important;
+    /* Outside the DOM flow */
+    height: 1px;
+    width: 1px;
+    /* Nearly collapsed */
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px);
+    /* IE 7+ only support clip without commas */
+    clip: rect(1px, 1px, 1px, 1px);
+    /* All other browsers */
+}
+
+button {
+    cursor: pointer;
+}
