--- a/src/styles/components/_people-slider.scss
+++ b/src/styles/components/_people-slider.scss
@@ -30,10 +30,12 @@
         font-size: 52px;
         color: $white;
         font-weight: 300;
+        text-shadow: 0px 2px 2px rgba(0, 0, 0, .25);
     }
     &__name {
         font-size: 90px;
         color: $white;
+        text-shadow: 0px 2px 2px rgba(0, 0, 0, .25);
     }
     &__close {
         position: absolute;
