--- a/src/styles/components/_people.scss
+++ b/src/styles/components/_people.scss
@@ -8,6 +8,7 @@
     h2 {
         color: $secondary-color;
         font-weight: 600;
+        margin-bottom: 120px;
     }
     &__grid {
         // display: grid;
@@ -18,14 +19,13 @@
         margin: 0 auto;
         // display: inline-flex;
         // flex-wrap: wrap;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: 4rem;
+        padding-right: 4rem;
         max-width: 1280px;
     }
-    &__item {}
     &__mail {
-        height: 40px;
-        width: 40px;
+        height: 20%;
+        width: 20%;
         background: $secondary-color;
         position: absolute;
         top: 5%;
@@ -35,7 +35,7 @@
         background-image: url("../images/mail.svg");
         background-position: center center;
         background-repeat: no-repeat;
-        background-size: 18px 12px;
+        background-size: 45% 45%;
         transition: ease .4s background-color, box-shadow .4s;
         -webkit-box-shadow: 0px 0px 0px 0px rgba(72, 195, 220, 1);
         -moz-box-shadow: 0px 0px 0px 0px rgba(72, 195, 220, 1);
@@ -75,6 +75,9 @@
             -moz-box-shadow: 0px 10px 22px 0px rgba(128, 128, 128, 1);
             box-shadow: 0px 10px 22px 0px rgba(128, 128, 128, 1);
         }
+        margin-bottom: 1rem;
+    }
+    &__item {
         margin-bottom: 2rem;
     }
     // &__overlay {
