--- a/src/styles/components/_people-slider.scss
+++ b/src/styles/components/_people-slider.scss
@@ -25,40 +25,58 @@
         border: dashed 5px rgba(255, 255, 255, .25);
         display: inline-block;
         padding: 30px 60px;
+        @include mobile {}
+        padding: 20px 40px;
     }
     &__title {
-        font-size: 52px;
+        font-size: 3.4vw;
         color: $white;
         font-weight: 300;
         text-shadow: 0px 2px 2px rgba(0, 0, 0, .25);
     }
     &__name {
-        font-size: 90px;
+        font-size: 5.85vw;
         color: $white;
         text-shadow: 0px 2px 2px rgba(0, 0, 0, .25);
     }
     &__close {
+        @include mobile {
+            width: 30px;
+            height: 30px;
+            top: 2rem;
+            right: 2rem;
+        }
         position: absolute;
         display: block;
         width: 60px;
         height: 60px;
         border: none;
-        top: 2rem;
-        right: 2rem;
+        top: 3rem;
+        right: 3rem;
         z-index: 1000;
         background: transparent;
         background-image: url("../images/close.svg");
         background-position: center center;
         background-repeat: no-repeat;
         background-size: contain;
+        transition: transform .2s ease;
+        &:hover,
+        &:focus {
+            transform: scale(1.1);
+        }
     }
     &__prev {
+        @include mobile {
+            width: 2rem;
+            height: 2rem;
+            left: 2rem;
+        }
         position: absolute;
-        left: 2rem;
+        left: 3rem;
         top: 50%;
         transform: translateY(-50%);
-        width: 2rem;
-        height: 2rem;
+        width: 4rem;
+        height: 4rem;
         background: $white;
         z-index: 100;
         z-index: 1000;
@@ -69,14 +87,24 @@
         background-repeat: no-repeat;
         background-size: contain;
         overflow: visible;
+        transition: transform .2s ease;
+        &:hover,
+        &:focus {
+            transform: translateY(-50%) scale(1.2);
+        }
     }
     &__next {
+        @include mobile {
+            width: 2rem;
+            height: 2rem;
+            right: 2rem;
+        }
         position: absolute;
-        right: 2rem;
+        right: 3rem;
         top: 50%;
         transform: translateY(-50%);
-        width: 2rem;
-        height: 2rem;
+        width: 4rem;
+        height: 4rem;
         background: $white;
         z-index: 100;
         background: transparent;
@@ -86,5 +114,10 @@
         background-repeat: no-repeat;
         background-size: contain;
         overflow: visible;
+        transition: transform .2s ease;
+        &:hover,
+        &:focus {
+            transform: translateY(-50%) scale(1.2);
+        }
     }
 }
