--- a/src/styles/components/_people.scss
+++ b/src/styles/components/_people.scss
@@ -21,7 +21,7 @@
         // flex-wrap: wrap;
         padding-left: 4rem;
         padding-right: 4rem;
-        max-width: 1280px;
+        max-width: 1350px;
     }
     &__mail {
         height: 20%;
@@ -69,7 +69,8 @@
             position: relative;
             padding-bottom: 100%;
         }
-        &:hover {
+        &:hover,
+        &:focus {
             transform: scale(1.05);
             -webkit-box-shadow: 0px 10px 22px 0px rgba(128, 128, 128, 1);
             -moz-box-shadow: 0px 10px 22px 0px rgba(128, 128, 128, 1);
