--- a/src/styles/components/_people-slider.scss
+++ b/src/styles/components/_people-slider.scss
@@ -25,8 +25,9 @@
         border: dashed 5px rgba(255, 255, 255, .25);
         display: inline-block;
         padding: 30px 60px;
-        @include mobile {}
-        padding: 20px 40px;
+        @include mobile {
+            padding: 20px 40px;
+        }
     }
     &__title {
         font-size: 3.4vw;
