--- a/src/styles/components/_people-slider.scss
+++ b/src/styles/components/_people-slider.scss
@@ -14,6 +14,7 @@
     left: 0;
     right: 0;
     min-height: 100vh;
+    height: 100vh;
     z-index: 1000;
     transition: opacity .4s 0s, transform 0s .4s;
     &.open {
