--- a/src/styles/components/_people.scss
+++ b/src/styles/components/_people.scss
@@ -3,12 +3,15 @@
     background-position: center center;
     background-repeat: repeat;
     overflow: hidden;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    padding-top: 2rem;
+    line-height: 3.4em;
+    padding-bottom: 2rem;
     h2 {
         color: $secondary-color;
         font-weight: 600;
         margin-bottom: 120px;
+        margin-left: 3rem;
+        margin-right: 3rem;
         @include mobile {
             margin-bottom: 60px;
         }
@@ -104,7 +107,7 @@
         line-height: 1.2em;
         margin-bottom: 0.5em;
         @include mobile {
-            font-size: 20px;
+            font-size: 24px;
         }
     }
     &__title {
@@ -113,7 +116,7 @@
         line-height: 1.2em;
         margin-bottom: 0.5em;
         @include mobile {
-            font-size: 20px;
+            font-size: 18px;
         }
     }
     &__location {
@@ -122,7 +125,7 @@
         line-height: 1.2em;
         margin-bottom: 0.5em;
         @include mobile {
-            font-size: 20px;
+            font-size: 18px;
         }
     }
 }
